# fkperplexity

./: .env  .env.local  .gitignore  400-ERROR-SOLUTION.md  DS160-SETUP-GUIDE.md  FINAL-SOLUTION.md  FIXES-APPLIED-v2.md  FIXES-APPLIED.md  MULTILINGUAL-IMPLEMENTATION.md  WEB-CALLING-CHANGES.md  WORKING-SOLUTION.md  index-react.html  index.html  package-lock.json  package.json  pyproject.toml  test-endpoints.js  test.py  test2.py  tool.ts  vapi-agent.ts  vapi_agent.py  vite.config.ts  webhook-handler.ts  webhook-server.ts
.cursor/rules/: project_context.mdc
convex/: auth.ts  funcs.ts  schema.ts
convex/_generated/: api.d.ts
mcp/: README.md  main.py  pyproject.toml  test.py  utils.py
mcp/dump/: agent_flow_analysis.md  main.py  test3.py
src/: App.css  App.tsx  index.css  main.tsx
